# diffant

./: .coveragerc  .flake8  .gitignore  .python-version  .sourcery.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  clean.sh  pyproject.toml  tox.ini
diffant/: exceptions.py  main.py
diffant/deserializer/: __init__.py  abc.py  ini.py  json.py  xml.py  yaml.py
diffant/differ/: __init__.py  differ.py  types.py
diffant/reader/: __init__.py  abc.py  cloud.py  local.py  read.py
diffant/report/: abc.py  generate.py  raw.py
tests/data/ini/simple_different/: simple_01.ini
tests/data/ini/simple_same/: simple_01.ini  simple_02.ini
tests/data/json/simple/: file01.json  file02.json  file03.json
tests/data/xml/simple_different/: file_01.xml  file_02.xml
tests/data/yml/simple_different/: file_01.yml
tests/deserializer/: test_ini.py  test_json.py  test_xml.py  test_yaml.py
tests/differ/: test_differ.py
tests/diffini/: test_ini_parse_file.py
tests/diffjson/: test_add_missing_keys_to_flat_recs.py  test_calc.py  test_create_flat_recs.py  test_flatten_item.py  test_get_config_files.py  test_parse_config_files.py  test_remove_no_diff_from_flat_recs.py  test_report.py  test_set_report.py
tests/diffxml/: test_xml_parse_file.py
tests/diffyml/: test_yml_parse_file.py
tests/main/: test_create_differ.py  test_get_config_files_type.py  test_get_input_dir.py  test_main.py
tests/nested/: test_sort.py
tests/report/: test_raw.py
