[tool.poetry]
name = "diffant"
version = "1.0.3"
description = "tool to compare structured files like json, ini , yaml"
authors = ["omacneil <dan@omacneil.org>"]
license = "GPL-3.0-or-later"
readme  = "README.md"
homepage = "https://github.com/omacneil/diffant"
repository = "https://github.com/omacneil/diffant"
keywords = ["json", "yaml","ini","diff","configuration","compare"]
classifiers=[
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
    ]

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "6.0"
types-pyyaml = "6.0.12.10"
xmltodict = "0.13.0"
types-xmltodict = "0.13.0.2"
typer = "^0.9.0"
cloudpathlib = "^0.15.0"
more-itertools = "^9.1.0"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
coverage = "7.2.5"
flake8 = "6.0.0"
isort = "5.12.0"
mypy = "1.3.0"
pylint = "2.17.2"
pytest = "7.3.1"
pytest-mock = "3.10.0"
radon = "6.0.1"
sourcery-cli = "^1.2.0"
tox = "4.6.0"

[tool.poetry.scripts]
diffant = "diffant.main:app"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
